--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,6 @@ end_of_line = crlf
 indent_style = space
 indent_size = 2
 
-[*.twig]
-insert_final_newline = false
+[*.json]
+indent_style = space
+indent_size = 2
