--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,6 @@
 *.properties text
 *.txt text
 *.xml text
-*.svg text
 *.yml text
 .htaccess text
 
@@ -28,6 +27,7 @@
 *.pem eol=lf
 
 # Denote all files that are truly binary and should not be modified.
+composer binary
 *.png binary
 *.jpg binary
 *.gif binary
@@ -35,12 +35,11 @@
 *.mo binary
 *.pdf binary
 *.phar binary
-*.woff binary
-*.woff2 binary
-*.ttf binary
+
+# Web fonts are binary
 *.otf binary
 *.eot binary
-*.gz binary
-*.bz2 binary
-*.7z binary
-*.zip binary
+*.svg binary
+*.ttf binary
+*.woff binary
+*.woff2 binary
