--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,54 @@
-language: php
-
+sudo: true
 dist: trusty
 
-sudo: false
+language: php
 
 php:
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
+  - nightly
+
+node_js:
+  - "7"
+
+addons:
+  chrome: stable
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: 7.2
+    - php: nightly
 
-  include:
-    - php: 7.0
-      env: PHPCS=1
+install:
+  - ./bin/composer validate --strict
+  - ./bin/composer install --no-interaction --no-progress --no-suggest
+  - yarn install
+  - mkdir -p build/logs
+  - ./bin/build app:install CHOWN_USER=$USER,CHGRP_GROUP=$USER,DB_NAME=app,DB_ADMIN_USER=root,DB_USER=root
 
 before_script:
-  - if [[ $PHPCS = 1 ]]; then composer require cakephp/cakephp-codesniffer:~2.1; fi
-  - if [[ $PHPCS != 1 ]]; then composer install; fi
-  - if [[ $PHPCS != 1 ]]; then composer require phpunit/phpunit:"^5.7|^6.0"; fi
-  - if [[ $PHPCS != 1 ]]; then composer run-script post-install-cmd --no-interaction; fi
+  - ./bin/phpserv >/dev/null 2>&1 &
+  - sleep 10
 
 script:
-  - if [[ $PHPCS != 1 ]]; then vendor/bin/phpunit; fi
-  - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./config ./webroot; fi
+  - yarn test
+  - ./vendor/bin/phpunit --group example --no-coverage
+  - ./vendor/bin/phpunit --exclude-group example
+  - ./vendor/bin/phpcs
+
+after_success:
+  - curl -s https://codecov.io/bash > /tmp/codecov.sh
+  - chmod +x /tmp/codecov.sh
+  - /tmp/codecov.sh -s build/test-results
 
 notifications:
-  email: false
+  email:
+    - fr3nch13@gmail.com
