test composer update.

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     },
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
