--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "cakephp/migrations": "^1.0",
         "cakephp/plugin-installer": "^1.0",
         "gourmet/whoops": "~1.0",
-        "josegonzalez/dotenv": "2.*",
+        "josegonzalez/dotenv": "^3.2",
         "maiconpinto/cakephp-adminlte-theme": "^1.0",
         "mobiledetect/mobiledetectlib": "2.*"
     },
